@@ -657,22 +657,12 @@ Options may also be set in the 'RI' environment variable.
         end
         out << RDoc::Markup::Rule.new(1)
 
-        if method.call_seq then
-          call_seq = method.call_seq.chomp.split "\n"
-          call_seq = call_seq.map { |line| ['  ', line, "\n"] }
-          out << RDoc::Markup::Verbatim.new(*call_seq.flatten)
-        elsif method.params then
-          out << RDoc::Markup::Verbatim.new('  ', method.params, "\n")
+        if method.arglists then
+          arglists = method.arglists.chomp.split "\n"
+          arglists = arglists.map { |line| ['  ', line, "\n"] }
+          out << RDoc::Markup::Verbatim.new(*arglists.flatten)
+          out << RDoc::Markup::Rule.new(1)
         end
-
-        if method.block_params then
-          out << RDoc::Markup::BlankLine.new if method.call_seq
-          params = "yields: #{method.block_params}"
-          out << RDoc::Markup::Verbatim.new('  ', params, "\n")
-        end
-
-        out << RDoc::Markup::Rule.new(1) if
-          method.call_seq or method.params or method.block_params
 
         out << RDoc::Markup::BlankLine.new
         out << method.comment
@@ -795,7 +785,7 @@ Options may also be set in the 'RI' environment variable.
     end
 
     methods.each do |item|
-      yield(*item)
+      yield(*item) # :yields: store, klass, ancestor, types, method
     end
 
     self
