@@ -357,7 +357,6 @@ class TestRDocRIDriver < MiniTest::Unit::TestCase
     assert_match %r%Foo::Bar#blah%, out
     assert_match %r%blah.5%,        out
     assert_match %r%blah.6%,        out
-    assert_match %r%yields: stuff%, out
   end
 
   def test_display_method_attribute
@@ -423,7 +422,7 @@ Foo::Bar#bother
       @driver.display_method 'Foo::Bar#bother'
     end
 
-    assert_match %r%\(things\)%, out
+    assert_match %r%things.*stuff%, out
   end
 
   def test_expand_class
@@ -775,10 +774,10 @@ Foo::Bar#bother
 
     @blah = RDoc::AnyMethod.new nil, 'blah'
     @blah.call_seq = "blah(5) => 5\nblah(6) => 6\n"
-    @blah.block_params = "stuff"
 
     @bother = RDoc::AnyMethod.new nil, 'bother'
     @bother.params = "(things)"
+    @bother.block_params = "stuff"
 
     @new  = RDoc::AnyMethod.new nil, 'new'
     @new.singleton = true
